--- a/LocationClient/pom.xml
+++ b/LocationClient/pom.xml
@@ -40,6 +40,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+    		<groupId>com.ohadr</groupId>
+    		<artifactId>ohadr.commons</artifactId>
+    		<version>0.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
